Fix presentation on mobile for samples page

--- a/ratel.css
+++ b/ratel.css
@@ -172,7 +172,6 @@ button, input[type="submit"], input[type="reset"] {
     background-position: center;
 	color: white;
 	border: none;
-	padding: 0;
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
